--- a/deploy/00-prereqs.yaml
+++ b/deploy/00-prereqs.yaml
@@ -5,7 +5,7 @@ metadata:
   name: nats-operator
   # Change to the name of the namespace where to install NATS Operator.
   # Alternatively, change to "nats-io" to perform a cluster-scoped deployment in supported versions.
-  namespace: default
+  namespace: nats-io
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -21,7 +21,7 @@ subjects:
   name: nats-operator
   # Change to the name of the namespace where to install NATS Operator.
   # Alternatively, change to "nats-io" to perform a cluster-scoped deployment in supported versions.
-  namespace: default
+  namespace: nats-io
 
 # NOTE: When performing multiple namespace-scoped installations, all
 # "nats-operator" service accounts (across the different namespaces)
